# picota

./: .gitignore  Dockerfile  LICENSE  README.md  base.Dockerfile  project.legio  requirements.txt  run-dt.sh
backend/: artifact.legio  openapi.yaml  pom.xml
picota-service/: packaging_commands.sh  pyproject.toml
picota-service/picota/: openapi.yaml  picota_service.py  training_service.py
picota-service/picota/framework/: __init__.py
picota-service/picota/framework/control/: MetamorphicEvaluation.py  TrainingCommander.py  TrainingJobExecutor.py  TrainingJobWorker.py  TrainingOutputPathResolver.py  TrainingService.py  TrainingThreadRegistry.py  TrainingTicketLifecycle.py  __init__.py
picota-service/picota/framework/control/adapters/: __init__.py
picota-service/picota/framework/control/kan/: KAN.py  MetamorphicCatalog.py  MetamorphicLoss.py  TimeSeriesDataset.py
picota-service/picota/framework/control/rules/: ApiRuleBuilder.py
picota-service/picota/framework/control/ticket/: TicketStore.py
picota-service/picota/framework/model/: ArchitectureConfig.py  DataSourceConfig.py  FieldParser.py  InferenceRequest.py  SplitConfig.py  TimeHorizon.py  TrainingConfigError.py  __init__.py
picota-service/picota/framework/view/: API_CONTRACT.md  HttpServerFactory.py  PicotaApiController.py  RuntimeTrainerRequestHandler.py  TrainingApiController.py  __init__.py
picota-service/picota_runtime_trainer.egg-info/: SOURCES.txt  top_level.txt
picota-service/tests/: test_energigran_operation_logging.py  test_training_framework.py  use_case_data_sources.py  use_case_rules.py
(+666 files in other folders)
