[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "picota-runtime-trainer"
version = "0.1.0"
description = "Shared runtime trainer framework for Picota"
requires-python = ">=3.10"

[project.scripts]
picota-training-service = "picota.training_service:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["picota*"]
